--- a/slate/src/components/client/Navbar/signedoutlinks.css
+++ b/slate/src/components/client/Navbar/signedoutlinks.css
@@ -128,3 +128,12 @@
         display: block;
     }
 }
+
+
+@media only screen and (max-width: 320px) {
+    .navbar-items a {
+        display: block;
+        margin: 0;
+        padding: 9px 10px;
+    }
+}
